2007-03-26  OHASHI Akira  <bg66@koka-in.org>

	* COMPILE.in: Rename from `COMPILE'.
	(mixi-modules): New variable.
	(mixi-compile): Use it.
	(mixi-install): Ditto.
	(mixi-compile-package): Ditto.
	(mixi-install-package): Ditto.
	(mixi-compile-modules): Follow the change above.
	(mixi-install-modules): Ditto.
	* .cvsignore: Add COMPILE.
	* acinclude.m4 (AC_EXAMINE_MODULES): New function.
	(AC_CHECK_SHIMBUN): Don't use AC_SUBST.
	(AC_CHECK_GNUS): Ditto.
	(AC_CHECK_WL): Ditto.
	(AC_CHECK_RIECE): Ditto.
	* configure.ac: Use AC_EXAMINE_MODULES.
	(HAVE_SHIMBUN): Abolish.
	(HAVE_GNUS): Ditto.
	(HAVE_WL): Ditto.
	(HAVE_RIECE): Ditto.
	(AC_CONFIG_FILES): Add COMPILE.
	* Makefile.am (MODULES_MIXI): Abolish.
	(MODULES_SHIMBUN): Ditto.
	(MODULES_GNUS): Ditto.
	(MODULES_WL): Ditto.
	(MODULES_RIECE): Ditto.
	(MODULES): Ditto.
	(DISTCLEANFILES): New variable.
	(EXTRA_DIST): Follow the change above.
	(elc): Ditto.
	(install): Ditto.
	(package): Ditto.
	(install-package): Ditto.

2007-03-25  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* sb-mixi.el (shimbun-mixi-default-group-alist): New constant;
	rename from `shimbun-mixi-group-alist'.
	(shimbun-mixi-group-alist): Change the default value to nil.
	(shimbun-mixi-group-alist): New function.
	(shimbun-groups): Use it instead of the same name variable.
	(shimbun-get-headers): Ditto.

2007-03-25  OHASHI Akira  <bg66@koka-in.org>

	* INSTALL-CVS: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2007-03-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-closed-regexp): Fix regexp.
	(mixi-diary-owner-nick-regexp): Ditto.
	(mixi-diary-time-regexp): Ditto.
	(mixi-diary-title-regexp): Ditto.
	(mixi-diary-content-regexp): Ditto.
	(mixi-realize-diary): Follow the change above.
	(mixi-event-community-regexp): Fix regexp.
	(mixi-event-time-regexp): Ditto.
	(mixi-event-title-regexp): Ditto.
	(mixi-event-owner-regexp): Ditto.
	(mixi-event-owner-seceded-regexp): Ditto.
	(mixi-event-date-regexp): Ditto.